# demo-vapp

./: .dockerignore  .env.example  .gitignore  .sindriignore  ADS_debug.md  BATCH_UNIFICATION_COMPLETE.md  BATCH_UNIFICATION_PLAN.md  BYO_PK_README.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE.md  SINDRI_INTEGRATION.md  audit.md  deny.toml  deploy-circuit.sh  docker-compose.dev.yml  docker-compose.yml  install-dependencies.sh  regenerate-sqlx-cache.sh  rust-toolchain.toml  sindri.json  sindri_arithmetic_input.json  verify_ads_database.md  vk.json
api/: Cargo.toml
api/.sqlx/: query-2dbadabc669975e191c596335be264989747d63467584a48c3ed7a9f6bf9068f.json  query-44eaeb08562483cff84f68d2a2ef2518210a5cfff151a86b2bca9fdde56e227d.json
api/src/: batch_processor.rs  graphql.rs  integration.rs  lib.rs  middleware.rs  rest.rs  server.rs  unified_batch_service.rs
circuits/counter/: Cargo.toml  build.sh  deploy_sindri.sh  prove.sh  prove_sindri.sh  sindri.json  verify_compare.sh  verify_local.sh
cli/: Cargo.toml
db/: Cargo.toml  README.md
db/.sqlx/: query-01cecd8b636eecc864b6d1f6d094a4c5a402712f8692e4767db97e2817647454.json  query-029309ef622d88a5f865304107e32a0a7e6d4cf7694a32c15f3e5b0358b545b8.json  query-07cc93c669720af3c339e8f7e2f0f8c9d4234106eaf1f44b489d500efb64fa24.json  query-1b97db484bb2e7164a77751d8ccb60679fb22999db60e4233b64642f963d4d04.json  query-22c46e7ddca99b22ea634bce8549b10a945d3e0930d91856c74a8a92b04b9cae.json  query-30acc9743970c8c7b4e8d58406c0861526aecdcd28b7e0e07582f8e9d07286f5.json  query-33f748fcc1fbdc89adda60fe30a4caee9003e1407ce8485dd03fb1d951d4b2f6.json  query-40a7c77a6e77efd3ec375f0b63b1726dbe924316f5513c5a4f06e6f196593631.json  query-46e0d784a3b1b09f8b823940dbb71a3b9103c6a9f7b19b640d298e5c40ef87c3.json  query-4c4924ad8cf4d94f1da737262a4a99d6e4c0581b8596da3b6a022ce308845eee.json  query-53c2c010b14b0732ca56d134487bf433721a2b76d31acd1b1fc0737d199c358b.json  query-57377f297eaa5ab15068d99f7d6bbc1efd3d0d80c3ffc12ade14712f6e0bad9c.json  query-5b8ca0e650c51b3a41beef4184ecfa45b148277dacdf6d8f09130d96190bb368.json  query-5d335033d617cd65680951a2402a30b758d11a57781d035f70d1d3e2c42b8e4a.json  query-60336bbdc956aa4114844371ee25cf7d6fe2480e01b9d73b11ca20f35e478470.json  query-614865a2c5a4be4baaa630cd50d5eeb3b98ec7d5cb70910b5d61edeb433f0724.json  query-64b4c3009b351d19d237d642689f491b3fe6b82ff8a33b5e01d88de8a6f7b754.json  query-65855996373b3e70c9c758d2674970be498fc01b147c1654d6be9af6e63f50b6.json  query-662f8d16f7b354dece5574db1b8f93bac9b1a2e995a1e0b23d6b381c8e811499.json  query-6f9d52165dd31cd8a7edfab20e73d760a816f779c30101526d8440dea3667724.json  query-733f8ba7ecd922f39f6e2702eaf5b6c9ba96ab16ebe14291bd930d433a41e08d.json  query-75c683e555a12352cf5333d8a4da4d20e40f405d7b002b7dfce5eb988df6adb8.json  query-7e322259bee9257f0fdb4fda00f144e25fdf9a9634cb24747afb2ef0319b5065.json  query-83d49f1db01c063faa25692ce50a39eab149de4f8625d812fe6d08d946b09c58.json  query-94351a3689b17108093f96490925f1b226d2a72deb5aa6c27fc31afbd5ca0fa4.json  query-9a20b2034a2f2582a696ecc6089ee29c825f9284075748e9bae4bcb750896368.json  query-9f853218b02a0040cc674772e32b5e06dff1054c32bfc8ea8c586617d20d584b.json  query-a23131545aec17178e81116f07ed7a14172cbe572e5377d0be052020662b57a6.json  query-a34b2875cd82397c9427a4806f42acd3b26a8d0db64ef9197fa033dcd6b566f8.json  query-a6945d299cede86c16dc8af805a0f84dd7b05d11d271734d8be0f6fd1b31b4d4.json  query-a7eaa6c80e54f5cf225ef590527406da44d19a4aa472fe5510aae96fc71a231c.json  query-ac4ee0c6ca5e0442e76a76055884c0efcdc890dccc58e744968391e0c3543a4d.json  query-afde44315dd0a93df25f93fd130f9a4033232268c4b13a96d08b7d934264b5d2.json  query-b31d653a8069643265cc245a6d1f38893e24bf5df6887185808f78723fcaf84d.json  query-b48c00aec8770f15322f3eb11868fd4848934d90dde85fdd143cba685c142bbc.json  query-b6bef3994f4788c453f2d53ef44989ad07e056f4efe8e7eb0b04fd03a654e94e.json  query-cda1421949fc8647eaa37bbb9cd48da9bf4ed59de8b3bfcd936a8289e89d430d.json  query-d775829ae42f1c2ecc5b940de15294522e42e11779ac71d7fa25b7297e4f5349.json  query-d881780a46741cef985e74b21ccf7bbf3ce6ac3ae1bf740c461840b5157a20b0.json  query-e358802d2e030a90062fa9718e8e5ac667c0d5d31a7dcea29b30fd6e981fa10e.json  (+5 more)
db/migrations/: 001_create_arithmetic_transactions.sql  002_create_indexed_merkle_tree.sql  003_create_audit_events.sql  004_create_processor_state.sql  005_create_sindri_proofs.sql  007_create_global_state.sql  008_add_updated_at_to_arithmetic_transactions.sql  009_breaking_change_batch_processing.sql  010_fix_create_batch_race_condition.sql  011_fix_counter_state_management.sql  012_add_posted_to_contract_column.sql  012_restore_imt_schema.sql  013_fix_remaining_imt_issues.sql  014_fix_function_duplicate.sql  015_fix_empty_tree_initialization.sql  017_fix_find_low_nullifier_permanent.sql  018_fix_tree_index_race_condition.sql  019_restore_compatibility.sql  020_initialize_genesis_state.sql  README.md
db/src/: ads_service.rs  ads_service_tests.rs  api_tests.rs  background_processor.rs  base_transaction.rs  db.rs  error.rs  error_tests.rs  indexed_merkle_tree_tests.rs  lib.rs  merkle_tree.rs  merkle_tree_32.rs  merkle_tree_32_tests.rs  merkle_tree_tests.rs  proof_verification_tests.rs  test_utils.rs  tests.rs  transaction.rs  vapp_integration.rs
ethereum-client/: .env.example  Cargo.toml  INDEPENDENT_VERIFICATION.md  Makefile  README.md  TESTING.md  test_commands.sh  test_integration.sh
ethereum-client/examples/: basic_usage.rs  debug_signer.rs  full_test_suite.rs  get_previous_state_root.rs  independent_verification.rs  mock_integration.rs  publish_state.rs  test_connection.rs  test_contract.rs  test_network.rs  test_write.rs
ethereum-client/migrations/: 001_create_ethereum_submissions.sql
ethereum-client/src/: cache.rs  client.rs  client_complex.rs.bak  client_simple.rs  client_stub.rs  config.rs  contracts.rs  error.rs  event_manager.rs  lib.rs  types.rs
lib/: Cargo.toml
script/: Cargo.toml  build.rs
utils/: Cargo.toml  README.md  build.rs  check_ads_data.sql  check_ads_tables.py  generate_a_local_proof.rs  test_ads_data.sql  test_ads_integration.sh  test_unified_batch_flow.sh
(+83 files in other folders)
