[workspace]
members  = [ "db", "lib", "program", "script" ]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "1.3"
bincode         = "2.0.1"
parking_lot     = "0.12.4"
qmdb            = { git = "https://github.com/ardaglobal/qmdb", package = "qmdb", branch = "mc/chore/dep-updates" }
serde           = { version = "1.0.219", default-features = false }
