[workspace]
members  = [ "api", "db", "lib", "program", "script" ]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "1.0"
bincode         = "2.0.1"
clap            = "4.5.43"
dotenv          = "0.15.0"
eyre            = "0.6"
hex             = "0.4.3"
parking_lot     = "0.12.4"
serde           = { version = "1.0.219", default-features = false, features = [ "derive" ] }
serde_json      = { version = "1.0.142", default-features = false, features = [ "alloc" ] }
sp1-build       = "5.2.1"
sp1-sdk         = "5.2.1"
sp1-zkvm        = { version = "5.2.1" }
sqlx            = { version = "0.8.6", features = [ "chrono", "migrate", "postgres", "runtime-tokio-rustls" ] }
termion         = "4.0"
tokio           = { version = "1.47.1", features = [ "full" ] }
tracing         = "0.1.41"
