[workspace]
members  = [ "api", "cli", "db", "ethereum-client", "lib", "program", "script", "utils" ]
resolver = "2"

[workspace.dependencies]
alloy-consensus      = "1.0"
alloy-contract       = "1.0"
alloy-json-rpc       = "1.0"
alloy-network        = "1.0"
alloy-primitives     = "1.3.0"
alloy-provider       = "1.0.24"
alloy-rpc-types      = "1.0"
alloy-rpc-types-eth  = "1.0"
alloy-signer         = "1.0"
alloy-signer-local   = "1.0"
alloy-sol-types      = "1.0"
alloy-transport      = "1.0"
alloy-transport-http = "1.0"
anyhow               = "1.0"
bincode              = "2.0.1"
chrono               = "0.4"
clap                 = "4.5.43"
dotenv               = "0.15.0"
eyre                 = "0.6"
futures              = "0.3"
hex                  = "0.4.3"
once_cell            = "1.20"
parking_lot          = "0.12.4"
reqwest              = "0.12"
serde                = { version = "1.0.219", default-features = false, features = [ "derive" ] }
serde_json           = { version = "1.0.142", default-features = false, features = [ "alloc" ] }
sindri               = "0.3.1"
sp1-build            = "5.2.1"
sp1-sdk              = "5.2.1"
sp1-zkvm             = "5.2.1"
sqlx                 = "0.8.6"
termion              = "4.0"
thiserror            = "2.0.14"
tokio                = { version = "1.47.1", features = [ "full" ] }
tracing              = "0.1.41"
tracing-subscriber   = "0.3"
url                  = "2.5"
uuid                 = "1.0"
