[package]
edition = "2021"
license = "MIT"
name    = "cli"
version = "0.1.0"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
# Simple HTTP client (avoid full API server dependencies)
ethereum-client = { path = "../ethereum-client", package = "ethereum-client" }
reqwest         = { workspace = true, features = [ "json" ] }
serde           = { workspace = true }
serde_json      = { workspace = true }
sp1-sdk         = { workspace = true }

# CLI functionality
clap = { workspace = true, features = [ "derive", "env" ] }
eyre = { workspace = true }

# Runtime and utilities
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }

# Local verification dependencies
alloy-primitives = { workspace = true }
alloy-sol-types  = { workspace = true }
arithmetic-lib   = { path = "../lib", package = "lib" }
hex              = { workspace = true }

# API types for consistent response parsing
arithmetic-api = { path = "../api", package = "api", default-features = false }
