[package]
edition = "2021"
license = "MIT"
name    = "db"
version = "0.1.0"


[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7.2", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[features]
default = [ "tikv-jemallocator" ]

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
serde = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "json",
    "postgres",
    "runtime-tokio-rustls", 
    "uuid",
] }
thiserror = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = [ "serde", "v4" ] }

# SP1 and arithmetic dependencies  
alloy-sol-types = { workspace = true }
arithmetic-lib  = { path = "../lib", package = "lib" }
sindri          = { version = "0.3.1", features = [ "sp1-v5" ] }
sp1-sdk         = { workspace = true }

# Utility dependencies (kept for non-API uses)
async-trait = "0.1"
hex = "0.4"
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
url = "2.5"

[dev-dependencies]
arithmetic-lib     = { path = "../lib", package = "lib" }
tempfile           = "3.10"
tracing-subscriber = "0.3"
tracing-test       = "0.2"
uuid               = { version = "1.0", features = [ "v4" ] }
