[package]
edition = "2021"
name    = "ethereum-client"
version = "0.1.0"

[dependencies]
# Alloy Ethereum types and utilities
alloy-consensus      = "1.0"
alloy-contract       = { version = "1.0", features = [ "pubsub" ] }
alloy-json-rpc       = "1.0"
alloy-network        = "1.0"
alloy-primitives     = { version = "1.3.0", features = [ "serde" ] }
alloy-provider       = { version = "1.0.24", features = [ "reqwest", "ws" ] }
alloy-rpc-types      = { version = "1.0", features = [ "eth" ] }
alloy-rpc-types-eth  = "1.0"
alloy-signer         = "1.0"
alloy-signer-local   = "1.0"
alloy-sol-types      = { workspace = true, features = [ "json" ] }
alloy-transport      = "1.0"
alloy-transport-http = "1.0"

# Async runtime
futures = "0.3"
tokio   = { version = "1.47", features = [ "full" ] }

# Serialization
serde      = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

# Error handling
anyhow    = "1.0"
eyre      = "0.6"
thiserror = "1.0"

# Environment and configuration
clap   = { version = "4.5", features = [ "derive" ] }
dotenv = "0.15"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

# HTTP client
reqwest = { version = "0.12", features = [ "json" ] }

# Utilities
hex       = "0.4"
once_cell = "1.20"
url       = { version = "2.5", features = ["serde"] }

# Database integration (optional for caching/indexing)
chrono = { version = "0.4", features = [ "serde" ], optional = true }
sqlx = { version = "0.8", features = [
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
], optional = true }
uuid = { version = "1.0", features = [ "serde", "v4" ], optional = true }

# Local dependencies
arithmetic-lib = { path = "../lib" }

[features]
database = [ "chrono", "sqlx", "uuid" ]
default  = [ "database" ]
