[package]
edition = "2021"
license = "MIT"
name    = "arithmetic-lib"
version = "0.1.0"

[dependencies]
alloy-sol-types = { workspace = true }
clap            = { version = "4.0", features = [ "derive" ], optional = true }
hex             = "0.4"
serde           = { version = "1.0", features = [ "derive" ] }
serde_json      = "1.0"
sindri          = { version = "0.3.1", features = [ "sp1-v5" ] }
sp1-sdk         = "5.2.1"
thiserror       = "1.0"
tokio           = { version = "1.0", features = [ "time" ] }
tracing         = "0.1"

[features]
clap    = [ "dep:clap" ]
default = [  ]
