[package]
edition = "2021"
license = "MIT"
name    = "arithmetic-program-builder"
version = "0.1.0"

# This crate builds the SP1 program via build.rs and provides local SP1 unit testing
# The CLI functionality has been moved to the cli/ directory

[[bin]]
name = "local-sp1-test"
path = "src/bin/main.rs"

[dependencies]
# Core computation (for types)
arithmetic-lib = { path = "../lib" }

# SP1 SDK for local proving
sp1-sdk = { workspace = true }

# Utilities
alloy-sol-types = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"

[build-dependencies]
sp1-build = { workspace = true }
