[package]
default-run = "arithmetic"
edition     = "2021"
license     = "MIT"
name        = "arithmetic-script"
version     = "0.1.0"

[[bin]]
name = "arithmetic"
path = "src/bin/main.rs"

[dependencies]
alloy-primitives   = { version = "1.3.0", features = [ "serde" ] }
alloy-sol-types    = { workspace = true }
arithmetic-db      = { path = "../db" }
arithmetic-lib     = { path = "../lib" }
base64             = "0.21"
clap               = { workspace = true, features = [ "derive", "env" ] }
dotenv             = { workspace = true }
ethereum-client    = { path = "../ethereum-client" }
eyre               = { workspace = true }
hex                = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sindri             = { version = "0.3.1", features = [ "sp1-v5" ] }
sp1-sdk            = { workspace = true }
sp1-zkvm           = { workspace = true }
sqlx               = { workspace = true }
termion            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = "0.3"

[build-dependencies]
sp1-build = { workspace = true }
