[package]
edition = "2021"
license = "MIT"
name    = "utils"
version = "0.2.0"

[[bin]]
name = "generate_a_local_proof"
path = "generate_a_local_proof.rs"


[dependencies]
alloy-consensus      = { workspace = true }
alloy-contract       = { workspace = true }
alloy-json-rpc       = { workspace = true }
alloy-network        = { workspace = true }
alloy-primitives     = { workspace = true }
alloy-provider       = { workspace = true }
alloy-rpc-types      = { workspace = true }
alloy-rpc-types-eth  = { workspace = true }
alloy-signer         = { workspace = true }
alloy-signer-local   = { workspace = true }
alloy-sol-types      = { workspace = true }
alloy-transport      = { workspace = true }
alloy-transport-http = { workspace = true }
arithmetic-lib       = { path = "../lib", package = "lib" }
hex                  = { workspace = true }
sp1-sdk              = { workspace = true }
tokio                = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
